Remove game2d module, backport to Java 8, several bug fixes, add FFI API, add Bundleable/Savable/Cacheable API, slightly re-design